Fix latest message not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,3 +98,10 @@
   width: 50px;
   border-radius: 50%;
 }
+
+#user-profile-image {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
